--- a/header.html
+++ b/header.html
@@ -3,11 +3,11 @@
         <div class="header-content">
             <!-- Logo principal -->
             <a href="index.html" class="logo">Factor M</a>
-            <button class="menu-toggle" aria-label="Abrir menú" aria-expanded="false" aria-controls="main-nav-menu">
+            <button class="menu-toggle" aria-label="Abrir menú" aria-expanded="false" aria-controls="primary-navigation">
                 <span class="hamburger"></span>
             </button>
             <div class="main-menu main-menu-wrap">
-                <nav id="main-nav-menu" class="main-menu header-menu primary-navigation" aria-expanded="false" aria-hidden="true">
+                <nav id="primary-navigation" class="main-menu header-menu primary-navigation" aria-expanded="false" aria-hidden="true">
                     <ul id="menu-menu-principal" class="menu">
                         <li class="menu-item"><a href="index.html">Inicio</a></li>
                         <li class="menu-item"><a href="pages/politica.html">Política</a></li>
