--- a/header.html
+++ b/header.html
@@ -2,20 +2,20 @@
     <div class="container">
         <div class="header-content">
             <!-- Logo principal -->
-            <a href="index.html" class="logo">Factor M</a>
+            <a href="/index.html" class="logo">Factor M</a>
             <button class="menu-toggle" aria-label="Abrir menú" aria-expanded="false" aria-controls="primary-navigation">
                 <span class="hamburger"></span>
             </button>
             <div class="main-menu main-menu-wrap">
                 <nav id="primary-navigation" class="main-menu header-menu primary-navigation" aria-expanded="false" aria-hidden="true">
                     <ul id="menu-menu-principal" class="menu">
-                        <li class="menu-item"><a href="index.html">Inicio</a></li>
-                        <li class="menu-item"><a href="pages/politica.html">Política</a></li>
-                        <li class="menu-item"><a href="pages/cultura.html">Cultura</a></li>
-                        <li class="menu-item"><a href="pages/deportes.html">Deportes</a></li>
-                        <li class="menu-item"><a href="pages/tecnologia.html">Tecnología</a></li>
-                        <li class="menu-item"><a href="pages/nosotros.html">Nosotros</a></li>
-                        <li class="menu-item"><a href="pages/la-columna-del-peluche.html">Columna Del Peluche</a></li>
+                        <li class="menu-item"><a href="/index.html">Inicio</a></li>
+                        <li class="menu-item"><a href="/pages/politica.html">Política</a></li>
+                        <li class="menu-item"><a href="/pages/cultura.html">Cultura</a></li>
+                        <li class="menu-item"><a href="/pages/deportes.html">Deportes</a></li>
+                        <li class="menu-item"><a href="/pages/tecnologia.html">Tecnología</a></li>
+                        <li class="menu-item"><a href="/pages/nosotros.html">Nosotros</a></li>
+                        <li class="menu-item"><a href="/pages/la-columna-del-peluche.html">Columna Del Peluche</a></li>
                     </ul>
                 </nav>
             </div>
