Arreglo general por IA

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
 
                 <div class="articles-grid">
                     <article class="article-card">
-                        <img src="/imagenes/godoycruxplano.webp" alt="Godoy Cruz" class="card-image" loading="lazy" />
+                        <img src="imagenes/godoycruxplano.webp" alt="Godoy Cruz" class="card-image" loading="lazy" />
 
                         <div class="card-content">
                             <span class="category-tag">DEPORTES</span>
