--- a/pages/la-columna-del-peluche.html
+++ b/pages/la-columna-del-peluche.html
@@ -18,13 +18,13 @@
         <div class="container">
             <section class="section">
                 <div class="section-header">
-                    <img src="/imagenes/Logo_header-preview.png" alt="La Columna del Peluche" class="section-title" style="max-width: 300px; height:auto;">
+                    <img src="../imagenes/Logo_header-preview.png" alt="La Columna del Peluche" class="section-title" style="max-width: 300px; height:auto;">
                     <div class="section-line"></div>
                 </div>
                 
                 <div class="articles-grid">
                     <article class="article-card">
-                        <img src="/imagenes/Peluchefoto.jpg" alt="Columna del Peluche" class="card-image" loading="lazy">
+                        <img src="../imagenes/Peluchefoto.jpg" alt="Columna del Peluche" class="card-image" loading="lazy">
                         <div class="card-content">
                             <span class="category-tag">OPINIÓN</span>
                             <h3 class="card-title">Las verdades que nadie se atreve a decir</h3>
@@ -35,7 +35,7 @@
                         </div>
                     </article>
                     <article class="article-card">
-                        <img src="/imagenes/el-presidente-javier-milei-sentado-en-el-balcon-de-la-casa-rosada-1716380.webp" alt="Javier Milei" class="card-image" loading="lazy">
+                    <img src="../imagenes/el-presidente-javier-milei-sentado-en-el-balcon-de-la-casa-rosada-1716380.webp" alt="Javier Milei" class="card-image" loading="lazy">
                         <div class="card-content">
                             <span class="category-tag">CHISMES</span>
                             <h3 class="card-title">Milei y el misterio del león: ¿nuevo look o campaña viral?</h3>
@@ -46,7 +46,7 @@
                         </div>
                     </article>
                     <article class="article-card">
-                        <img src="/imagenes/la-expresidenta-cristina-kirchner-saluda-a-la-militancia-desde-el-balcon-de-su-departamento-de-constitucion-donde-cump.webp" alt="Cristina Fernández de Kirchner" class="card-image" loading="lazy">
+                        <img src="../imagenes/la-expresidenta-cristina-kirchner-saluda-a-la-militancia-desde-el-balcon-de-su-departamento-de-constitucion-donde-cump.webp" alt="Cristina Fernández de Kirchner" class="card-image" loading="lazy">
                         <div class="card-content">
                             <span class="category-tag">CHISMES</span>
                             <h3 class="card-title">Cristina y el WhatsApp secreto: ¿grupo de memes o gabinete paralelo?</h3>
