--- a/header.html
+++ b/header.html
@@ -19,6 +19,17 @@
                     </ul>
                 </nav>
             </div>
+            
+            <!-- Botón de cambio de tema -->
+            <div class="theme-switcher">
+                <button class="change-skin" id="theme-toggle" title="Cambiar tema (claro/oscuro)" aria-label="Cambiar tema">
+                    <span class="change-skin-icon">
+                        <i class="fas fa-sun light-icon"></i>
+                        <i class="fas fa-moon dark-icon" style="display: none;"></i>
+                    </span>
+                    <span class="screen-reader-text">Cambiar tema</span>
+                </button>
+            </div>
         </div>
     </div>
 </header>
