--- a/pages/la-columna-del-peluche.html
+++ b/pages/la-columna-del-peluche.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Opinión y análisis con humor y perspectiva. La columna más irreverente de Mendoza.">
     
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <!-- Font Awesome para iconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
@@ -65,5 +67,6 @@
 
         <script src="../js/main.js"></script>
         <script src="../js/contador-tiempo.js"></script>
+
 </body>
 </html>
