--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         <div class="container">
             <div class="breaking-content">
                 <span class="breaking-label">ÚLTIMO MOMENTO</span>
-                <span>Gobierno de Mendoza anuncia nuevas medidas para el sector vitivinícola • </span>
-                <span>Elecciones municipales: primeros resultados • Tecnología: Argentina lidera innovación en Latinoamérica</span>
-                    <span class="breaking-date contador-tiempo">Hace 5 minutos</span>
+                <span>Gobierno de Mendoza anuncia nuevas medidas para el sector vitivinícola • 
+                Elecciones municipales: primeros resultados • Tecnología: Argentina lidera innovación en Latinoamérica
+                <span class="breaking-date contador-tiempo"></span>
             </div>
         </div>
     </div>
