--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -7,6 +7,8 @@
     <meta name="description" content="Conoce al equipo detrás de Factor M, el periodismo independiente desde Mendoza.">
     
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
+    <!-- Font Awesome para iconos -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
